--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Getting Started</title>
-
+    <title>Express React Webpack Babel Setup</title>
   </head>
   <body>
-
-   <script src="main.js"></script>
+     Hello From Index
+    <div id="app"></div>
+    <script src="./bundle.js"></script>
   </body>
 </html>
